# mayalabs-sdk-python

./: .gitignore  EXAMPLES.md  LICENCE  README.md  pyproject.toml  setup.py  test.ipynb
examples/: README.md  add_to_google_sheet.py  function.ipynb  function.py  if_else_loop.py  native_memory.py  sql_test.py  test.ipynb  test.py  web_scraping.py
examples/01_hello_world/: README.md  hello_world_1.py  hello_world_2.py
examples/02_variables_assignment/: README.md  variables_handling_1.py  variables_handling_2.py
examples/03_conditionals_and_looping/: README.md  conditionals_1.py  looping_with_conditionals_1.py
examples/04_branching_and_remerging/: README.md  branching_1.py  branching_and_remerging_1.py
examples/09_browser_control_with_puppeteer/: README.md  coinmarketcap_defi.py  coinmarketcap_defi_solana.py  web_scraping.py
examples/10_custom_functions/: 01_simple_generated_function.py
examples/11_word_embeddings_and_natural_language_querying/: native_memory.py
examples/12_miscellaneous/: add_to_google_sheet.py
examples/13_worker_delegation/: 01_parallel_worker_spawn.py
examples/hello_world/: README.md  hello_world_1.py  hello_world_2.py
mayalabs/: __init__.py  cli.py  consts.py  exceptions.py  function.py  mayalabs.py  session.py  util.py  worker.py
mayalabs/cli/: auth.py  entry.py  helpers.py  instruct.py  search.py  teach.py
mayalabs/utils/: defaults.py  general.py  log.py  logging.py  pac_engine.py  poll.py  (+1 more)
src/: __init__.py  session.py  worker.py
tests/: example_1.py  example_2.py  example_3.py  examples_2.py
usage/: function.py
(+5 files in other folders)
