[project]
name = "mayalabs"
version = "0.0.2"
description = "Python SDK for Maya Labs' natural language programming paradigm"
dependencies = [
    "requests",
    "pydantic",
    "websockets",
    "click",
    "importlib-metadata",
    "colorama"
]
license = {file = "LICENSE"}
authors=[
 {name="Maya Support", email="humans@mayalabs.io"}
]

maintainers = [
 {name="Maya Support", email="humans@mayalabs.io"}
 ]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

