[project]
name = "mayalabs"
version = "0.0.7"
description = "Python SDK for Maya Labs' natural language programming paradigm"
dependencies = [
    "requests",
    "pydantic",
    "websockets",
    "click",
    "colorama",
    "aiohttp>=3.6,<4.0"
]
requires-python = ">=3.6"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors=[
 {name="Maya Support", email="humans@mayalabs.io"}
]

maintainers = [
 {name="Maya Support", email="humans@mayalabs.io"}
 ]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[project.scripts]
mayalabs = "mayalabs.cli:cli"

[project.urls]
homepage = "https://mayalabs.io"
repository = "https://github.com/mayahq/mayalabs-sdk-python"

[project.optional-dependencies]
test=[
  "pytest==7.2.1"
]